动态获取数据

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,4 +15,10 @@
       </ion-item>
     </ion-item-sliding>
   </ion-list>
+  <button ion-button clear item-end (click)="getData()">
+    获取数据
+  </button>
+  <button ion-button clear item-end (click)="clearData()">
+    清除数据
+  </button>
 </ion-content>
