添加list、detail测试页面（配合app_frame）

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,4 +21,8 @@
   <button ion-button clear item-end (click)="clearData()">
     清除数据
   </button>
+
+  <button ion-button fule round (click)="turnToList()">
+    列表页
+  </button>
 </ion-content>
