配合应用壳测试session storage

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,4 +25,9 @@
   <button ion-button fule round (click)="turnToList()">
     列表页
   </button>
+
+  <button ion-button fule round (click)="readSessionStorage()">
+    读取应用壳session storage
+  </button>
+
 </ion-content>
